--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                htl.steyr.rockpaperscissors_mhoreth_lkreisma/htl.steyr.rockpaperscissors_mhoreth_lkreisma.HelloApplication
+                                htl.steyr.rockpaperscissors_mhoreth_lkreisma/htl.steyr.rockpaperscissors_mhoreth_lkreisma.GameApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
